--- a/websiteStyles.css
+++ b/websiteStyles.css
@@ -16,11 +16,19 @@
   border-color: rgb(255 206 68 / var(--tw-border-opacity)) !important;
 }
 
-#license {
+/* #license {
   background-color:  rgb(244 244 244 / var(--tw-bg-opacity)) !important;
   width: 100%;
   padding: 12px;
   color: rgb(88 88 88 / var(--tw-text-opacity)) !important;
+  font-family: __metropolis_8f55fa, __metropolis_Fallback_8f55fa;
+} */
+
+#license {
+  background-color:  #D3D3D3 !important;
+  width: 100%;
+  padding: 12px;
+  color: black !important;
   font-family: __metropolis_8f55fa, __metropolis_Fallback_8f55fa;
 }
 
@@ -238,13 +246,14 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #000000;
+  background-color: white;
   height: 100px;
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
   z-index: 1000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 nav .logo {
@@ -327,7 +336,7 @@ nav ul li {
 }
 
 nav ul li a {
-  color: #fff;
+  color: black;
   text-decoration: none;
   font-size: 18px;
   font-family: "Inter", sans-serif;
@@ -338,7 +347,7 @@ nav ul li a::after {
   content: "";
   width: 0;
   height: 3px;
-  background: #fff;
+  background: black;
   position: absolute;
   left: 0;
   bottom: -6px;
@@ -708,6 +717,18 @@ h2 {
       margin-left: 0;
     }
   
+    nav {
+      height: 75px;
+    }
+
+    .header-content {
+      padding-top: 70px;
+    }
+
+    nav .logo {
+      height: 35px;
+    }
+
     #tenants .step {
   
       margin-left: 0;
@@ -995,7 +1016,7 @@ nav .logo { /*priyank*/
   }
   #landowners{
   padding-top: 0px;  /* Smaller margin for mobile */
-  min-height: 110vh;
+  min-height: 150vh;
   }
   
   
@@ -1004,8 +1025,58 @@ nav .logo { /*priyank*/
   padding-top: -500px;
   }
   #merchants {
-    min-height: 105vh;
+    min-height: 140vh;
   padding-top: -500px; /* Reduce this value further if needed */
   }
   
+}
+
+@media (max-width: 390px) {
+  #merchants {
+    min-height: 115vh;
+  }
+
+  #landowners {
+    min-height: 120vh;
+  }
+}
+
+@media (max-width: 320px) {
+  #merchants {
+    min-height: 140vh;
+  }
+
+  #landowners {
+    min-height: 150vh;
+  }
+}
+
+@media (max-width: 376px) {
+  #merchants {
+    min-height: 140vh !important;
+  }
+
+  #landowners {
+    min-height: 150vh !important;
+  }
+}
+
+@media (max-width: 414px) {
+  #merchants {
+    min-height: 115vh;
+  }
+
+  #landowners {
+    min-height: 120vh;
+  }
+}
+
+@media (max-width: 430px) {
+  #merchants {
+    min-height: 112vh;
+  }
+
+  #landowners {
+    min-height: 120vh;
+  }
 }
